V4309 D810,820,830, most of pages P

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D810.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D810.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="810-41-WT1" TrendName="WEIGHT"/>
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="810-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="83"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-01-MA1" Canvas.Left="117" Canvas.Top="26"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="810-41-WT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
