--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P100.xaml
@@ -9,8 +9,8 @@
              x:Class="Prevu.Synoptics.P100" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="162" StatusComponent="098-01-MA1" PipeHeight="Medium" Canvas.Left="405" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="198" StatusComponent="098-01-ECS2" PipeHeight="Medium" Canvas.Left="91" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="162" StatusComponent="098-01-MA1" PipeHeight="Medium" Canvas.Left="405" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="198" StatusComponent="098-01-ECS2" PipeHeight="Medium" Canvas.Left="91" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="36" StatusComponent="103-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="678" Canvas.Top="498" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -57,7 +57,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Color="ByProduct" Width="178" RenderTransformOrigin="0.5,0.5" StatusComponent="102-01-MA1" Canvas.Left="698" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="84" Color="Water" Canvas.Left="246" Canvas.Top="699" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="113-01-MA1">
+    <Labels:Pipe Width="76" Color="Water" Canvas.Left="250" Canvas.Top="696" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" StatusComponent="113-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -65,7 +65,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="50" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="286" Canvas.Top="659" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="171" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="118" Canvas.Top="740"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="171" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="118" Canvas.Top="732"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" StatusComponent="115-22-CV1" Canvas.Left="323" Canvas.Top="508">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -88,8 +88,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Color="Water" Width="87" StatusComponent="115-21-CV1" Canvas.Left="260" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="410" Canvas.Top="777"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1080" Canvas.Top="698">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="410" Canvas.Top="774"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1080" Canvas.Top="694">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -126,7 +126,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="600" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="-180" Canvas.Top="442">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="588" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="-174" Canvas.Top="440">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -179,8 +179,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="535" Color="Water" Canvas.Left="118" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="113-01-MA1"/>
-    <Machines:V01_DCT_Decanter Canvas.Left="298" Canvas.Top="561" Height="279" Width="194" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" TrendName="LEVEL"/>
+    <Labels:Pipe Width="535" Color="Water" Canvas.Left="118" Canvas.Top="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="113-01-MA1"/>
+    <Machines:V01_DCT_Decanter Canvas.Left="298" Canvas.Top="559" Height="279" Width="194" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" TrendName="LEVEL"/>
     <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="50" Canvas.Left="95" Canvas.Top="457" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:EXC_HeatExchanger.RenderTransform>
         <TransformGroup>
@@ -188,17 +188,17 @@
         </TransformGroup>
       </Machines:EXC_HeatExchanger.RenderTransform>
     </Machines:EXC_HeatExchanger>
-    <Rectangle HorizontalAlignment="Center" Height="56" StrokeThickness="2" Stroke="Black" VerticalAlignment="Top" Width="4" Canvas.Left="648" Canvas.Top="751" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle HorizontalAlignment="Center" Height="56" StrokeThickness="2" Stroke="Black" VerticalAlignment="Top" Width="4" Canvas.Left="648" Canvas.Top="748" RenderTransformOrigin="0.5,0.5"/>
     <Rectangle HorizontalAlignment="Center" Height="28" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1064" Canvas.Top="133"/>
-    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="177" Canvas.Top="719">
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="177" Canvas.Top="711">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="536" Canvas.Top="757"/>
-    <Machines:External HorizontalAlignment="Left" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="622" Canvas.Top="696"/>
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="536" Canvas.Top="754"/>
+    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="622" Canvas.Top="693"/>
     <Machines:NT_ConveyorBelt Height="1" Width="154" Canvas.Left="1137" Canvas.Top="620" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Height="44" Canvas.Left="1111" Canvas.Top="124" Width="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Height="44" Canvas.Left="1303" Canvas.Top="124" Width="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -229,7 +229,7 @@
     <Machines:V01_VB_VibratingScreen Canvas.Left="851" Canvas.Top="437" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="587" Canvas.Top="347" HorizontalAlignment="Left" VerticalAlignment="Center" Width="146"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="976" Canvas.Top="622" Width="126" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:VRC_WaterCollectingTank Height="66" Width="94" Canvas.Left="696" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:VRC_WaterCollectingTank Height="66" Width="94" Canvas.Left="696" Canvas.Top="626" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:WaterPump Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="720" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
@@ -247,11 +247,11 @@
         </TransformGroup>
       </Machines:V01_SCW_Screw_wHopper.RenderTransform>
     </Machines:V01_SCW_Screw_wHopper>
-    <Machines:NT_ConveyorBelt Height="1" Width="152" Canvas.Left="275" Canvas.Top="79" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:NT_ConveyorBelt Height="1" Width="152" Canvas.Left="275" Canvas.Top="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Radar Height="36" Width="30" Canvas.Left="569" Canvas.Top="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="674" Canvas.Top="498" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Rectangle Height="4" Stroke="Black" Width="93" Canvas.Left="1074" Canvas.Top="699" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1161" Canvas.Top="676" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Rectangle Height="4" Stroke="Black" Width="93" Canvas.Left="1074" Canvas.Top="691" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1161" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -268,21 +268,21 @@
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
-    <Rectangle Height="64" Stroke="Black" Width="4" RenderTransformOrigin="0.5,0.5" Canvas.Left="190" Canvas.Top="53" HorizontalAlignment="Center" VerticalAlignment="Top" StrokeThickness="2"/>
-    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="167" Canvas.Top="14" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="64" Stroke="Black" Width="4" RenderTransformOrigin="0.5,0.5" Canvas.Left="190" Canvas.Top="59" HorizontalAlignment="Center" VerticalAlignment="Top" StrokeThickness="2"/>
+    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="167" Canvas.Top="20" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
-    <Labels:JumpLabel JumpFromLabel="098-01-ECS2" JumpToLabel="228-01-MA1" Canvas.Left="1441" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="1376" Canvas.Top="461" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <TextBlock Canvas.Top="565" Text="{Custom:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1391" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Height="66" Width="137"/>
-    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Top="21" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="19"/>
-    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="961" Canvas.Top="793" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <TextBlock Canvas.Top="792" Text="{Custom:Loc Waste}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="1132" FontSize="26" Foreground="White" Height="41" Width="137" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="098-01-ECS2" JumpToLabel="029-71-ECS2" Canvas.Left="29" Canvas.Top="54"/>
+    <Labels:JumpLabel JumpFromLabel="098-01-ECS2" JumpToLabel="228-01-MA1" Canvas.Left="1425" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="22" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="1378" Canvas.Top="461" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock Canvas.Top="569" Text="{Custom:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1369" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Height="66" Width="137"/>
+    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="22" Foreground="White" Text="BOLLEGRAAF" Canvas.Top="25" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="27"/>
+    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="22" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="985" Canvas.Top="789" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <TextBlock Canvas.Top="788" Text="{Custom:Loc Waste}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="1132" FontSize="22" Foreground="White" Height="41" Width="137" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="098-01-ECS2" JumpToLabel="029-71-ECS2" Canvas.Left="37" Canvas.Top="60"/>
     <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="115-41-LT1" JumpToLabel="293-01-MA1" RenderTransformOrigin="-0.711,0.53" Canvas.Left="469" Canvas.Top="480" Direction="Left"/>
     <Labels:DetailsLabel ComponentName="107-HEAT" DetailsPageName="D107" Canvas.Left="35" Canvas.Top="457" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="352" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -290,9 +290,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="123-01-MA1" Canvas.Left="1283" Canvas.Top="66"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-22-CV1" Canvas.Left="405" Canvas.Top="411"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" Canvas.Left="350" Canvas.Top="633"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="155" Canvas.Top="773"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="514" Canvas.Top="700"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS2" Canvas.Left="670" Canvas.Top="753"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="155" Canvas.Top="762"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="514" Canvas.Top="697"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS2" Canvas.Left="670" Canvas.Top="750"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="100-01-MA1" Canvas.Left="754" Canvas.Top="81"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="1002" Canvas.Top="561"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="120-01-MA1" Canvas.Left="994" Canvas.Top="266"/>
@@ -303,16 +303,16 @@
     <Labels:DeviceLabel ComponentName="115-71-ECS1" Canvas.Left="296" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="115-71-ECS3" Canvas.Left="412" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="100-41-LT1" Canvas.Left="603" Canvas.Top="14" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="110-01-MA1" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="110-01-MA1" Canvas.Left="802" Canvas.Top="630" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="115-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="120-02-MA1" Canvas.Left="1109" Canvas.Top="386" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="104-01-MA1" Canvas.Left="856" Canvas.Top="501"/>
     <Labels:DeviceLabel ComponentName="102-01-MA1" Canvas.Left="670" Canvas.Top="290" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="103-01-MA1" Canvas.Left="591" Canvas.Top="411" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="127-71-ECS1" Canvas.Left="1075" Canvas.Top="733" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="103-01-MA1" Canvas.Left="589" Canvas.Top="411" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="127-71-ECS1" Canvas.Left="1075" Canvas.Top="729" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="120-71-ECS2" Canvas.Left="1338" Canvas.Top="375" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="371" Canvas.Top="18" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="098-01-ECS2" Canvas.Left="219" Canvas.Top="18" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="371" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="098-01-ECS2" Canvas.Left="219" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
   </Canvas>
 </UserControl>
