--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P330.xaml
@@ -24,21 +24,21 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="446" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="446" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="340-21-CV1" Canvas.Left="1028" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="340-21-CV1" Canvas.Left="1028" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="345-21-CV1" Canvas.Left="1247" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="345-21-CV1" Canvas.Left="1247" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -84,7 +84,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1123" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1123" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED"/>
     <Labels:Pipe Width="76" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="781" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -101,7 +101,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="128" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="323" Canvas.Top="66" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:Pipe Width="252" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="199" Canvas.Top="126" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="142" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="142" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED"/>
     <Labels:Pipe Width="68" StatusComponent="306-01-MA1" PipeHeight="Medium" Canvas.Left="489" Canvas.Top="341" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -123,15 +123,15 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-21-CV1" Canvas.Left="225" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-21-CV1" Canvas.Left="225" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="558" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="540" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
-    <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="325" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="558" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="540" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED"/>
+    <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="325" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS-CLOSED"/>
     <Labels:Pipe Width="64" StatusComponent="311-DISCHARGE" PipeHeight="Medium" Canvas.Left="1073" Canvas.Top="289" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -148,7 +148,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Machines:V01_STR_BatchReactor Height="239" Canvas.Left="1237" Canvas.Top="523" Width="122" Color="WetMaterial" ComponentName="345-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_STR_BatchReactor Height="239" Canvas.Left="1237" Canvas.Top="518" Width="122" Color="WetMaterial" ComponentName="345-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_STR_BatchReactor Height="239" Canvas.Left="1021" Canvas.Top="533" Width="122" Color="WetMaterial" ComponentName="340-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_STR_BatchReactor Height="240" Canvas.Left="440" Canvas.Top="540" Width="122" Color="WetMaterial" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="410" Canvas.Left="569" Canvas.Top="391" HorizontalAlignment="Center" VerticalAlignment="Top">
