--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
@@ -419,5 +419,6 @@
     <Labels:DeviceLabel ComponentName="920-01-ECS11" Canvas.Left="838" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="920-01-ECS12" Canvas.Left="838" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_Material_Inlet_Outlet Canvas.Left="38" Canvas.Top="146" Height="70" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <TextBlock Canvas.Top="542" Text="{lex:Loc PET Solution}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="953" FontSize="22" Foreground="White" Height="66" Width="108" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
