--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
@@ -349,8 +349,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="272" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="353" Canvas.Top="473" VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="432" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="406" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="272" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="353" Canvas.Top="473" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="432" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="" VisibilitySignal="" Canvas.Left="406" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -360,7 +360,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="46" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="335" Canvas.Top="455" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="46" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="" VisibilitySignal="" Canvas.Left="335" Canvas.Top="455" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -370,8 +370,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="346" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="618" Canvas.Top="50" VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="94" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="912" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="346" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="618" Canvas.Top="50" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="94" StatusComponent="890-01-ECS7" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="" VisibilitySignal="" Canvas.Left="912" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -381,7 +381,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="126" StatusComponent="950-01-ECS10" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="936" Canvas.Top="400" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="126" StatusComponent="950-01-ECS10" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="" VisibilitySignal="" Canvas.Left="936" Canvas.Top="400" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -523,5 +523,6 @@
         <Labels:DeviceLabel ComponentName="950-01-ECS10" Canvas.Left="838" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="950-01-ECS11" Canvas.Left="838" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="950-01-ECS12" Canvas.Left="838" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Canvas>
+    <TextBlock Canvas.Top="542" Text="{lex:Loc PET Solution}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="953" FontSize="22" Foreground="White" Height="66" Width="108" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
