--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D820.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D820.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" TrendName="WEIGHT" ComponentName="820-41-WT1"/>
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" TrendName="WEIGHT" ComponentName="820-41-WT1" Color="DryMaterial"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="83"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-01-MA1" Canvas.Left="117" Canvas.Top="26"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="820-41-WT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
