--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P810.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P810.xaml
@@ -71,7 +71,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="293" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="517" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="212" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="416" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" >
+    <Labels:Pipe Width="208" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="418" Canvas.Top="698" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -133,7 +133,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="249" StatusComponent="616-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-21-CV1" VisibilitySignal="MAT2" Canvas.Left="371" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" Color="Air" Canvas.Left="74" Canvas.Top="804"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" Color="Air" Canvas.Left="74" Canvas.Top="800"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" StatusComponent="616-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-21-CV1" VisibilitySignal="MAT2" Canvas.Left="585" Canvas.Top="108">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -141,7 +141,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="844-01-MA1" PipeHeight="Medium" Canvas.Left="136" Canvas.Top="668" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="844-01-MA1" PipeHeight="Medium" Canvas.Left="136" Canvas.Top="664" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -164,8 +164,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="344" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="181" Canvas.Top="802" />
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="846-01-MA1" PipeHeight="Medium" Canvas.Left="142" Canvas.Top="768" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="344" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="181" Canvas.Top="798" />
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="846-01-MA1" PipeHeight="Medium" Canvas.Left="142" Canvas.Top="764" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -210,9 +210,9 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="180" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" PipeHeight="Medium" Canvas.Left="1078" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="878-01-MA1" Color="Air" Canvas.Left="1170" Canvas.Top="795" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="878-01-MA1" PipeHeight="Medium" Canvas.Left="1262" Canvas.Top="793" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="877-01-MA1" PipeHeight="Medium" Canvas.Left="1224" Canvas.Top="758" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="878-01-MA1" Color="Air" Canvas.Left="1170" Canvas.Top="793" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="878-01-MA1" PipeHeight="Medium" Canvas.Left="1262" Canvas.Top="791" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="877-01-MA1" PipeHeight="Medium" Canvas.Left="1224" Canvas.Top="756" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -255,11 +255,11 @@
     <Machines:V01_SLX_MixingSiloScrew Canvas.Left="55" Canvas.Top="228" Height="234" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
     <Machines:V01_SLX_MixingSiloScrew Canvas.Left="326" Canvas.Top="186" Height="234" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
     <Machines:V01_DV_Diverter Canvas.Left="149" Canvas.Top="76" Height="57" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="144" Canvas.Top="690" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="135" Canvas.Top="768" Height="50" Width="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="1218" Canvas.Top="759" Height="50" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_BBF_SingleBag Canvas.Left="654" Canvas.Top="670" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="1226" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VS_Airlock Canvas.Left="144" Canvas.Top="686" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_ScarpaTrasporto Canvas.Left="135" Canvas.Top="764" Height="50" Width="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_ScarpaTrasporto Canvas.Left="1218" Canvas.Top="757" Height="50" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_BBF_SingleBag Canvas.Left="654" Canvas.Top="666" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VS_Airlock Canvas.Left="1226" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="1001" Canvas.Top="467" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="1222" Canvas.Top="501" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_SA_Elutriator Canvas.Left="1010" Canvas.Top="232" Height="201" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -267,8 +267,8 @@
     <Machines:V01_VS_Airlock Canvas.Left="1023" Canvas.Top="147" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VS_Airlock Canvas.Left="1244" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1351" Canvas.Top="242" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1130" Canvas.Top="772" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="59" Canvas.Top="781" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1130" Canvas.Top="770" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="59" Canvas.Top="777" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="922" Canvas.Top="241" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="50" Width="50">
       <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
         <TransformGroup>
@@ -286,22 +286,22 @@
     <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="848" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="1441" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="808-21-CV1" JumpToLabel="616-01-MA1" Canvas.Left="40" Canvas.Top="52" />
-    <Labels:JumpLabel JumpFromLabel="878-01-MA1" JumpToLabel="879-21-CV1" Canvas.Left="1417" Canvas.Top="762" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="873-BAG" DetailsPageName="D873" HideComponentName="True" Canvas.Left="739" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel JumpFromLabel="878-01-MA1" JumpToLabel="879-21-CV1" Canvas.Left="1417" Canvas.Top="760" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="873-BAG" DetailsPageName="D873" HideComponentName="True" Canvas.Left="739" Canvas.Top="771" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="131" Canvas.Top="178" />
     <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="403" Canvas.Top="139"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="848-01-MA1" Canvas.Left="39" Canvas.Top="725" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="846-01-MA1" Canvas.Left="211" Canvas.Top="696" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="848-01-MA1" Canvas.Left="39" Canvas.Top="721" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="846-01-MA1" Canvas.Left="211" Canvas.Top="692" />
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="812-01-MA1" Canvas.Left="181" Canvas.Top="485" />
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="822-01-MA1" Canvas.Left="306" Canvas.Top="435" />
     <Labels:DeviceLabel ComponentName="810-MIX-SILOS" Canvas.Left="525" Canvas.Top="501" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="808-21-CV1" Canvas.Left="145" Canvas.Top="22" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="850-01-MA1" Canvas.Left="924" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="849-01-MA1" Canvas.Left="1200" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="873-62-BAG" Canvas.Left="640" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="873-62-BAG" Canvas.Left="640" Canvas.Top="771" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="854-01-MA1" Canvas.Left="902" Canvas.Top="296" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="878-01-MA1" Canvas.Left="1110" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="877-01-MA1" Canvas.Left="1292" Canvas.Top="686" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="878-01-MA1" Canvas.Left="1110" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="877-01-MA1" Canvas.Left="1292" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="860-01-MA1" Canvas.Left="1310" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="864-01-MA1" Canvas.Left="1331" Canvas.Top="296" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="873-01-MA1" Canvas.Left="832" Canvas.Top="591" HorizontalAlignment="Left" VerticalAlignment="Center" />
